--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/IgorBarbashov/react_production_project/issues"
   },
-  "homepage": "https://github.com/IgorBarbashov/react_production_project#readme"
+  "homepage": "https://github.com/IgorBarbashov/react_production_project#readme",
+  "devDependencies": {
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
+  }
 }
