--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/IgorBarbashov/react_production_project#readme",
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   }
