--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     // В какую спецификацию компилируем: для поддержки большинства браузеров
     "target": "es5",
     // Позволяет использовать JSX
-    "jsx": "react",
+    "jsx": "react-jsx",
     // Компилятор будет обрабатывать не только TS файлы, но и JS файлы
     "allowJs": true,
     // Какие импорты будут - 99% это node
