tech: configure absolute imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,11 @@
     "allowJs": true,
     // Какие импорты будут - 99% это node
     "moduleResolution": "node",
+    // Для абсолютного импорта
+    "baseUrl": ".",
+    "paths": {
+      "*": ["./src/*"]
+    },
     // Если какая-либо библиотека не имеет default import,
     // лоадеры вроде ts-loader или babel-loader автоматически создают их
     // вместо такого импорта
