--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/IgorBarbashov/react_production_project#readme",
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
