--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/IgorBarbashov/react_production_project#readme",
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
@@ -28,11 +29,14 @@
     "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "react-refresh": "^0.14.0",
+    "react-refresh-typescript": "^2.0.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
+    "type-fest": "^4.14.0",
     "typescript": "^4.9.5",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.10.0",
