--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
     "babel-loader": "^9.1.3",
+    "babel-plugin-i18next-extract": "^0.10.0",
     "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
