--- a/package.json
+++ b/package.json
@@ -28,9 +28,16 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.10.0",
     "css-loader": "^6.6.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.34.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "react-refresh": "^0.14.0",
