--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.5.3",
+    "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
